=============================================================================
                                  WARNING
This current CVS version might not yet work with all libraries/programs which
use Gwenhywfar! Do not install it on production systems !!
=============================================================================

2005/11/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- reverted change of filename for gwenhywfar-config script
- install gwenhywfar2 headers to the same location as gwenhywfar1 (thus
  effectively overwriting gwenhywfar1 headers)
- incremented minor version number: Next release shall be 1.99.0


2005/11/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in keyspec.c: Was not writing keyType to db (we should backport
  this one to gwen1)


2005-11-15   Christian Stimming <stimming@tuhh.de>

	* m4/ssl.m4: Revert the configure argument name change; maybe this
	is not so unconventional after all and it is at least consistent
	with the rest of the configure arguments in aqbanking.

	* configure.ac, README.DARWIN: Add -L/sw/lib to linker flags on
	darwin, but don't use that in test/Makefile.am.

2005-11-14   Christian Stimming <stimming@tuhh.de>

	* m4/ssl.m4: Change configure argument name to
	--with-openssl-include (no s at the end); improve documentation.


2005/11/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a memory leak introduced by typemaker in GWEN_URL


2005/11/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added NetLayerFile (used for debugging, can be used instead of real sockets
  when testing new code)
- added NetLayerLog (used for debugging, loggs data read and written from
  netlayers below itself. The output of this layer can be used for 
  NetLayerFile)


2005/11/08: Martin Preuss<martin@libchipcard.de>