@@ -100,6 +100,20 @@ int GWEN_NetLayerSsl_GenerateCertAndKeyFile(const char *fname,
                                             int days,
                                             const GWEN_SSLCERTDESCR *cd);
 
+/**
+ * This function imports a certificate file and stores it under the
+ * correct name in the given folder.
+ * The expected format of the cert file is the same as that of certs
+ * generated by @ref GWEN_NetLayerSsl_GenerateCertAndKeyFile().
+ * For OpenSSL the destination name of the cert file is the hash of the name
+ * part of the given cert. However, the caller should not care about the
+ * destination name or the format of the destination file.
+ */
+GWENHYWFAR_API
+int GWEN_NetLayerSsl_ImportCertFile(const char *fname,
+				    const char *dname,
+                                    int overwrite);
+
 
 
 #endif /* GWEN_NL_SSL_H */
